# unit_tests_examples

./: .gitignore  CMakeLists.txt  README.md  runTests  unit_test_examples
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom.md  feature_request.yml
.github/workflows/: github-actions.yml
factorial/: CMakeLists.txt  factorial  runTests
factorial/include/factorial/: factorial.hpp
factorial/src/: factorial.cpp  main.cpp
factorial/test/: test_factorial.cpp  test_main.cpp
include/unit_tests_examples/: factorial.hpp  square_root.hpp
square_root/: CMakeLists.txt  runTests  square_root
square_root/include/square_root/: square_root.hpp
square_root/src/: main.cpp  square_root.cpp
square_root/test/: test_main.cpp  test_square_root.cpp
src/: factorial.cpp  main.cpp  square_root.cpp
test/: test_factorial.cpp  test_main.cpp  test_square_root.cpp
